@@ -32,6 +32,8 @@
         to suit the requirements of Dropbox team (the keys are now obfuscated, for instance).
     * Applied blocksize.patch from https://bugs.launchpad.net/duplicity/+bug/897423
       - New option --max-blocksize (default 2048) to allow increasing delta blocksize.
+    * Applied duplicity-ftps.patch from https://bugs.launchpad.net/duplicity/+bug/1104069
+      - Don't try to delete an empty file list.
 
 2013-02-17  Kenneth Loafman  <kenneth@loafman.com>
 
