@@ -51,6 +51,8 @@ Enhancements:
     to suit the requirements of Dropbox team (the keys are now obfuscated, for instance).
 * Applied blocksize.patch from https://bugs.launchpad.net/duplicity/+bug/897423
   - New option --max-blocksize (default 2048) to allow increasing delta blocksize.
+* Applied duplicity-ftps.patch from https://bugs.launchpad.net/duplicity/+bug/1104069
+  - Don't try to delete an empty file list.
 
 
 New in v0.6.21 (2013/01/23)
